--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -7,6 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".ui.drawer.DrawFragment">
 
+    <FrameLayout
+        android:id="@+id/touchArea"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginVertical="20dp" />
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/mainView"
         android:layout_width="match_parent"
@@ -44,11 +50,18 @@
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/drawAdapter"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/appListTouchArea"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/search_view_text" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/drawAdapter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/search_view_text" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
