--- a/app/src/main/res/values-da-rDK/wordoftheday.xml
+++ b/app/src/main/res/values-da-rDK/wordoftheday.xml
@@ -2,14 +2,14 @@
 <resources>
     <string-array name="settings_appearance_daily_word_default">
         <item>Forbliv robust!</item>
-        <item>Du har det her!</item>
+        <item>Du kan godt!</item>
         <item>Blink lyst!</item>
         <item>Skab skæbne.</item>
         <item>Omfavn rejsen.</item>
         <item>Styrke indeni.</item>
         <item>Fortsæt med at skubbe!</item>
         <item>Du er fantastisk!</item>
-        <item>Stol på, giv aldrig.</item>
+        <item>Stol, giv aldrig.</item>
         <item>Ubegrænset potentiale.</item>
         <item>Fremskridt frem for perfektion.</item>
         <item>Udfordringer = vækst.</item>
@@ -28,13 +28,13 @@
         <item>Øjne på præmien.</item>
         <item>Opnå hvad som helst!</item>
         <item>Tag dristige skridt.</item>
-        <item>Passion giver næring til dig.</item>
-        <item>Fokus på mål.</item>
+        <item>Passion driver dig.</item>
+        <item>Fokuser på mål.</item>
         <item>Hold ud, vind.</item>
         <item>Nøgle til selvtillid.</item>
         <item>Fortjener godt.</item>
-        <item>Ræk ud efter drømme.</item>
-        <item>Modig, stærk, smart.</item>
+        <item>Stræb efter drømme.</item>
+        <item>Modig, stærk, klog.</item>
         <item>Positiv holdning.</item>
         <item>Stol på rejsen.</item>
         <item>Urokkelig beslutsomhed.</item>
@@ -47,18 +47,18 @@
         <item>Drømme inden for rækkevidde.</item>
         <item>Du er ustoppelig!</item>
         <item>Tro, opnå.</item>
-        <item>Skub forbi grænserne.</item>
+        <item>Skub til grænserne.</item>
         <item>Vedholdenhed betaler sig.</item>
         <item>Forbliv frygtløs!</item>
-        <item>Hæv dig over udfordringer.</item>
+        <item>Overvind udfordringerne.</item>
         <item>Bliv ved med at drømme stort.</item>
         <item>Lev med formål.</item>
         <item>Fokuser på det gode.</item>
         <item>Styrke indefra.</item>
         <item>Tro på magi.</item>
-        <item>Smil, du har det her.</item>
+        <item>Smil. Du kan godt.</item>
         <item>Mist aldrig håbet.</item>
-        <item>Omfavn hvert øjeblik.</item>
+        <item>Tag imod hvert øjeblik.</item>
         <item>Vær din egen helt.</item>
         <item>Du er nok.</item>
         <item>Overvind din frygt.</item>
@@ -67,7 +67,7 @@
         <item>Forbliv positiv, altid.</item>
         <item>Du er en kriger.</item>
         <item>Tro på dig selv.</item>
-        <item>Omfavn muligheder.</item>
+        <item>Tag imod muligheder.</item>
         <item>Lev med lidenskab.</item>
         <item>Fortsæt fremad.</item>
         <item>Du er ustoppelig!</item>
@@ -77,24 +77,24 @@
         <item>Styrke i modgang.</item>
         <item>Voks hver dag.</item>
         <item>Udholdenhed, sejr.</item>
-        <item>Jagt dine lidenskaber.</item>
-        <item>Find glæden ved rejsen.</item>
+        <item>Følg dine passioner.</item>
+        <item>Find glæde i rejsen.</item>
         <item>Tag risici, trives.</item>
-        <item>Bliv stærk, modig.</item>
-        <item>Stol på indre visdom.</item>
+        <item>Forbliv stærk; modig.</item>
+        <item>Stol på din indre visdom.</item>
         <item>Bliv ved med at skinne klart.</item>
         <item>Drøm, tro, opnå.</item>
         <item>Vær ustoppelig.</item>
-        <item>Eje din storhed.</item>
-        <item>Omfavn det ukendte.</item>
-        <item>Fortsæt med at skubbe fremad.</item>
+        <item>Stå ved din storhed.</item>
+        <item>Tag imod det ukendte.</item>
+        <item>Bliv ved med at presse på.</item>
         <item>Stol på dig selv.</item>
         <item>Spred altid venlighed.</item>
         <item>Tro på dine drømme.</item>
-        <item>Forbliv fokuseret, beslutsom.</item>
+        <item>Forbliv fokuseret; beslutsom.</item>
         <item>Omfavn din rejse.</item>
         <item>Hold hovedet oppe.</item>
-        <item>Giv aldrig op håbet.</item>
+        <item>Opgiv aldrig håbet.</item>
         <item>Styrke indefra.</item>
         <item>Forbliv robust, stærk.</item>
         <item>Du er ustoppelig!</item>
